Add collapse support and fix image filename paths
🛠 Fixes:
- [x] Fix paths for filenames which have changed in Xcode 9.

ℹ️ Changes:
* Add support for collapsing expanded test cases.

🔒 Security Impact:
None.

<!--- If change impacts security...
- [ ] Reviewed by @venmo/venmo-security
--->

--- a/XCSummary/Templates/TestCaseTemplateFailed.html
+++ b/XCSummary/Templates/TestCaseTemplateFailed.html
@@ -2,7 +2,7 @@
 <div style="margin-left: %2.2f%@; background-color: #FF627C; padding:10px; text-align: right;">
     <table style="width: 100%">
         <tr>
-            <td style="text-align: left;">%@ <div style="display:inline; color: #d3d3d3">(%2.2f sec)</div></td>
+            <td style="text-align: left;" onclick="javascript:toggle('%@');">%@ <div style="display:inline; color: #999999">(%2.2f sec)</div></td>
         </tr>
     </table>
 </div>
