--- a/XCSummary/Templates/Template.html
+++ b/XCSummary/Templates/Template.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="UTF-8">
-        <title></title>
+            <title></title>
     </head>
+
     <body>
         %@
     </body>
+
+    <script language="javascript">
+        function toggle(contentDiv) {
+            var block = document.getElementById(contentDiv);
+            if(block.style.display == "block") {
+                block.style.display = "none";
+            }
+            else {
+                block.style.display = "block";
+            }
+        }
+    </script>
+
 </html>
