--- a/XCSummary/Templates/TestCaseTemplate.html
+++ b/XCSummary/Templates/TestCaseTemplate.html
@@ -2,7 +2,7 @@
 <div style="margin-left: %2.2f%@; background-color: #CBF4A3; padding:10px; text-align: right;">
     <table style="width: 100%">
         <tr>
-            <td style="text-align: left;">%@ <div style="display:inline; color: grey">(%2.2f sec)</div> </td>
+            <td style="text-align: left;" onclick="javascript:toggle('%@');">%@ <div style="display:inline; color: grey">(%2.2f sec)</div> </td>
         </tr>
     </table>
 </div>
